# internal/handler/SendJSONResp.go
@@ -4,6 +4,7 @@ import (
 	"encoding/json"
 	"log"
 	"net/http"
+	"project/domain"
 )
 
 type JSONResponse struct {
@@ -11,8 +12,7 @@ type JSONResponse struct {
 	Code    int    `json:"code"`
 }
 
-// Для успешных ответов
-func sendJSONSuccess(w http.ResponseWriter, message string, statusCode int) {
+func sendJSONResponse(w http.ResponseWriter, message string, statusCode int) {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(statusCode)
 
@@ -24,19 +24,11 @@ func sendJSONSuccess(w http.ResponseWriter, message string, statusCode int) {
 	}
 }
 
-// Для ошибок по аналогии с успешными ответами
-func sendJSONError(w http.ResponseWriter, message string, statusCode int) {
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(statusCode)
-
-	if err := json.NewEncoder(w).Encode(JSONResponse{
-		Message: message,
-		Code:    statusCode,
-	}); err != nil {
-		log.Printf("failed to write JSON response: %v", err)
-	}
+func sendJSONError(w http.ResponseWriter, err error) {
+	code, msg := domain.MapErrorToHTTP(err)
+	sendJSONResponse(w, msg, code)
 }
 
 var NotFoundHandler = func(w http.ResponseWriter, r *http.Request) {
-	sendJSONError(w, "Not found", http.StatusNotFound)
+	sendJSONResponse(w, "Not found", http.StatusNotFound)
 }
